# rstms-pymod

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat
rstms_pymod/: __init__.py  cli.py  project.py  utils.py  version.py
tests/: __init__.py  conftest.py  test_cli.py  test_project.py
tests/data/: pyproject.toml
