[build-system]
  build-backend = "flit_core.buildapi"
  requires = [
    "flit_core >=3.2,<4",
  ]
  requires_python = ">=3.10"

[project]
  authors = [
    { name = "Matt Krueger", email = "mkrueger@rstms.net" },
  ]
  classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
  ]
  dynamic = [
    "version",
    "description",
  ]
  keywords = [
    "rstms_pymod",
  ]
  license = { file = "LICENSE" }
  name = "rstms-pymod"
  readme = { file = "README.md", content-type = "text/markdown" }

  dependencies = [ "click", "tomlkit", "py-taplo" ]

[tool.flit.module]
  name = "rstms_pymod"

[project.optional-dependencies]
  dev = [
    "black",
    "bump2version",
    "coverage",
    "isort",
    "flake8",
    "flake8-length",
    "pdbpp",
    "py-taplo",
    "pytest",
    "python-box",
    "pytest-datadir",
    "toml",
    "tox",
  ]
  docs = [
    "m2r2",
    "sphinx",
    "sphinx-click",
    "sphinx-rtd-theme",
  ]

[project.urls]
  Home = "https://github.com/rstms/rstms_pymod"

[tool.black]
  line-length = 79

[tool.isort]
  profile = "black"

[tool.pytest]
  collect_ignore = [
    'setup.py',
  ]

[project.scripts]
  pymod = "rstms_pymod:cli"
